# aoc

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .vsAnalyze.ruleset  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yaml  ci.yml
cmake/: clang_format.cmake  clang_tidy.cmake  cmake_format.cmake  compiler_and_linker_flags.cmake  compiler_flags.cmake  coverage_report.cmake  format.cmake  setup_modules.cmake  setup_static_analysis.cmake
import/aoc22/: CMakeLists.txt
import/aoc24/: day1.cppm
import/aoc25/: day10.cppm  day11.cppm  day12.cppm  day7.cppm  day8.cppm  day9.cppm
imports/: CMakeLists.txt  day2.cppm
imports/aoc22/: day2.cppm
include/aoc22/: day1.hpp  day10.hpp  day11.hpp  day12.hpp  day13.hpp  day14.hpp  day15.hpp  day16.hpp  day17.hpp  day18.hpp  day19.hpp  day2.hpp  day3.hpp  day4.hpp  day5.hpp  day6.hpp  day7.hpp  day8.hpp  day9.hpp
include/aoc23/: day1.hpp  day10.hpp  day2.hpp  day3.hpp  day4.hpp  day5.hpp  day6.hpp  day7.hpp  day8.hpp  day9.hpp
include/aoc24/: day1.hpp  day10.hpp  day11.hpp  day12.hpp  day2.hpp  day3.hpp  day4.hpp  day5.hpp  day6.hpp  day7.hpp  day8.hpp  day9.hpp
include/aoc25/: day1.hpp  day2.hpp  day3.hpp  day4.hpp  day5.hpp  day6.hpp
modules/aoc24/: day1.cpp
src/: CMakeLists.txt  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day2.cppm  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  unit_test_helper.hpp
src/aoc22/: day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
src/aoc23/: day1.cpp  day10.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
src/aoc24/: day1.cpp  day10.cpp  day11.cpp  day12.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
src/aoc25/: day1.cpp  day10.cpp  day11.cpp  day12.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
src/common/: graph.cppm  matrix.cppm  rational.cppm
tests/: CMakeLists.txt  catch_test.cpp  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  inputs.hpp.in  main.cpp  parsing.hpp  tests_main.hpp
tests/aoc22/: day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
tests/aoc23/: day1.cpp  day10.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  inputs.hpp.in
tests/aoc24/: day1.cpp  day10.cpp  day11.cpp  day12.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  inputs.hpp.in
tests/aoc25/: day1.cpp  day10_test.cpp  day11_test.cpp  day12_test.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day7_test.cpp  day8_test.cpp  day9_test.cpp  inputs.hpp.in
tests/cmake/: configure_input_paths.cmake
tests/inputs/aoc24/day12/: example6.txt
tests/inputs/day14/: example.txt
